# frg-signal-detection

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  env.sh  pyproject.toml  requirements.txt
configs/: config.yaml  parameters.json
docs/source/: conf.py  descr.rst  index.rst  requirements.txt
docs/source/modules/: frg.distributions.rst  frg.rst  frg.utils.rst  modules.rst
notebooks/: canonical_dimensions.ipynb
scripts/: canonical_dimensions.py  evc_distribution.py  frg_equations.py  frg_equations_lpa.py  generate_config.py  plot_canonical_dimensions.py  plot_canonical_dimensions_snr.py  plot_canonical_dimensions_var.py  plot_evc_distribution.py  plot_evc_distribution_snr.py  plot_frg_equations.py  plot_frg_equations_lpa.py  plot_frg_equations_lpa_snr.py  plot_frg_equations_lpa_space.py  plot_frg_equations_lpa_traj.py  plot_frg_equations_snr.py  plot_frg_equations_space.py  plot_frg_equations_traj.py
src/: canonical_dimensions.py  frg_equations.py  frg_equations_lpa.py  plot_canonical_dimensions.py  simulation.py
src/frg/: __init__.py
src/frg/distributions/: distributions.py
src/frg/utils/: analysis.py  utils.py
tests/: config_test.py  distr_test.py  emp_test.py  logging_test.py  mp_test.py
tests/data/: mnist.npy
